--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
     <!--Linkando css-->
     <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="pokedex.css">
 </head>
 <body>
     
